Update NonarrayCodeGeneratorVisitor.java